# food-spoilage-poc

./: .gitignore  Makefile  README.md  datasets.yml  demo_predict.py  pyproject.toml
models/: __init__.py
models/artifacts/dafif/cnn/: img_labels.npy  img_probs.npy
models/artifacts/dafif/fusion/: metrics.json
models/artifacts/dafif/gbm/: metrics.json  model.txt  y_score.npy  y_test.npy
models/artifacts/dafif/iforest/: metrics.json  model.joblib
models/artifacts/dafif/lstm/: metrics.json  model.pt  y_score.npy  y_test.npy
notebooks/: 01_sensor_exploration.ipynb  02_model_metrics.ipynb  03_fusion_demo.ipynb
sample/: sensor.csv
src/: cli.py
src/datasets/: vision.py
src/models/: cnn.py  fusion.py  gbm.py  iforest.py  lstm.py
src/pipelines/: build_dataset.py  calibrate_threshold.py  convert.py  index_images.py  make_sequences.py  prepare_dafif.py  readme.md  score_map.py
